--- a/Ejercicio6.html
+++ b/Ejercicio6.html
@@ -1,1 +1,62 @@
-
+<!DOCTYPE html>
+<html>
+<head >
+    <link rel="stylesheet" href="/css/ejercicio6.css">
+   <title> Grupo de Musica - Queen </title> 
+</head>
+<body>
+<h1><b>Queen</b></h1>
+<br> Banda britanica formada en 1970 en Londres </br>
+<br><img src="/img/queen.jpg" alt="Queen">
+<br> <h2>Integrantes del Grupo</h2>
+<ul>
+    <li>Bryan Mye</li>
+    <li>Freddi Mercury</li>
+    <li>Jhoen Deacon</li>
+    <li>Roger Tyler</li>
+</ul>
+<h2>Discografia</h2>
+<table>
+    <caption> Grande éxitos de Queen </caption>
+    <thead>
+        <tr>
+            <th>
+                Año
+            </th>
+            <th>
+                Disco
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                1975
+            </td>
+            <td>
+                A night at the Opera
+            </td>
+        </tr>
+        <tr>
+            <td>1986</td>
+            <td>A king of magic</td>
+        </tr>
+        <tr>
+            <td>
+               1989 
+            </td>
+            <td>
+                the miracle
+            </td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <td colspan="2">
+        "A King of Magic" fue el album mas famoso
+        </td>
+    </tfoot>
+</table>
+<h2> Sitio web Favorito </h2>
+<a href="queenonline.com" >queenonline.com </a> 
+</body>
+</html>
