--- a/Ejercicio Pagina Web/html/Ejercicio13.html
+++ b/Ejercicio Pagina Web/html/Ejercicio13.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link rel="stylesheet" href="/css/Ejercicio13.css">
     <meta charset="UTF-8">
@@ -19,5 +19,26 @@
             <li><a href="/html"></a>Contactos</li>
         </ul>
     </nav>
+    <main>
+        <section class="grupoht" >
+            <img class="iconht" src="/img/html5.png" alt="html">
+            <br> <h1> Novedades en HTML5: Nuevas etiquetas para mejora de semántica </h1>
+            HTML5 sigue evolucionando con nuevas etiquetas semánticas diseñadas para mejorar la accesibilidad y optimización en motores de búsqueda.
+            Estas etiquetas permiten una estructura de contenido más clara y útil para los desarrolladores.
+        </section>
+        <section class="grupoxml">
+            <img class="xml" src="/img/xml.png" alt="xml">
+            <br> <h1>XML en seguridad de datos: Herramienta clave para el intercambio seguro</h1>
+            XML continúa siendo una opción popular en el intercambio de datos, especialmente por su versatilidad en la seguridad. Nuevas prácticas en su validación y codificación fortalecen la protección en aplicaciones empresariales y de datos criticos.
+        </section> 
+        <section class="grupocss">
+            <img class="css" src="/img/css.png" alt="css"> 
+            <br><h1>CSS en 2024: Flexbox y Grid transforman el diseño web</h1>
+            El uso combinado de Flexbox y CSS Grid está revolucionando el diseño web, permitiendo diseños más flexibles y adaptativos. Estas tecnologias facilitan la creación de interfaces responsivas sin complejos ajustes manuales.
+        </section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
