--- a/Ejercicio Pagina Web/html/Ejercicio13.html
+++ b/Ejercicio Pagina Web/html/Ejercicio13.html
@@ -1,44 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <link rel="stylesheet" href="/css/Ejercicio13.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="/css/Ejercicio13.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="/img/IAT-LOGOTIPO-Recortado sin fondo.png" alt="Foto logo" width="50"height="50">
-        Lenguaje de Marca y Sistemas de Gestion de Informacion 
+      <img
+        src="/img/IAT-LOGOTIPO-Recortado sin fondo.png"
+        alt="Foto logo"
+        width="50"
+        height="50"
+      />
+      Lenguaje de Marca y Sistemas de Gestion de Informacion
     </header>
     <nav>
-        <ul>
-            <li><a href="/html">Inicio</a></li>
-            <li><a href="/html"></a>Nosotros</li>
-            <li><a href="/html"></a>Servicios</li>
-            <li><a href="/html"></a>Contactos</li>
-        </ul>
+      <ul>
+        <li><a href="/html">Inicio</a></li>
+        <li><a href="/html"></a>Nosotros</li>
+        <li><a href="/html"></a>Servicios</li>
+        <li><a href="/html"></a>Contactos</li>
+      </ul>
     </nav>
     <main>
-        <section class="grupoht" >
-            <img class="iconht" src="/img/html5.png" alt="html">
-            <br> <h1> Novedades en HTML5: Nuevas etiquetas para mejora de semántica </h1>
-            HTML5 sigue evolucionando con nuevas etiquetas semánticas diseñadas para mejorar la accesibilidad y optimización en motores de búsqueda.
-            Estas etiquetas permiten una estructura de contenido más clara y útil para los desarrolladores.
-        </section>
-        <section class="grupoxml">
-            <img class="xml" src="/img/xml.png" alt="xml">
-            <br> <h1>XML en seguridad de datos: Herramienta clave para el intercambio seguro</h1>
-            XML continúa siendo una opción popular en el intercambio de datos, especialmente por su versatilidad en la seguridad. Nuevas prácticas en su validación y codificación fortalecen la protección en aplicaciones empresariales y de datos criticos.
-        </section> 
-        <section class="grupocss">
-            <img class="css" src="/img/css.png" alt="css"> 
-            <br><h1>CSS en 2024: Flexbox y Grid transforman el diseño web</h1>
-            El uso combinado de Flexbox y CSS Grid está revolucionando el diseño web, permitiendo diseños más flexibles y adaptativos. Estas tecnologias facilitan la creación de interfaces responsivas sin complejos ajustes manuales.
-        </section>
+      <section class="grupoht">
+        <img class="iconht" src="/img/html5.png" alt="html" />
+        <br />
+        <h1>Novedades en HTML5: Nuevas etiquetas para mejora de semántica</h1>
+        HTML5 sigue evolucionando con nuevas etiquetas semánticas diseñadas para
+        mejorar la accesibilidad y optimización en motores de búsqueda. Estas
+        etiquetas permiten una estructura de contenido más clara y útil para los
+        desarrolladores.
+      </section>
+      <section class="grupoxml">
+        <img class="xml" src="/img/xml.png" alt="xml" />
+        <br />
+        <h1>
+          XML en seguridad de datos: Herramienta clave para el intercambio
+          seguro
+        </h1>
+        XML continúa siendo una opción popular en el intercambio de datos,
+        especialmente por su versatilidad en la seguridad. Nuevas prácticas en
+        su validación y codificación fortalecen la protección en aplicaciones
+        empresariales y de datos criticos.
+      </section>
+      <section class="grupocss">
+        <img class="css" src="/img/css.png" alt="css" />
+        <br />
+        <h1>CSS en 2024: Flexbox y Grid transforman el diseño web</h1>
+        El uso combinado de Flexbox y CSS Grid está revolucionando el diseño
+        web, permitiendo diseños más flexibles y adaptativos. Estas tecnologias
+        facilitan la creación de interfaces responsivas sin complejos ajustes
+        manuales.
+      </section>
     </main>
     <footer>
-        
+      <div>
+        <p>2024 LMSGI</p>
+      </div>
+      <div class="imagen">
+        <a href="https://youtube.com">
+          <img src="/img/icon_instagram.png" alt="inta" />
+        </a>
+        <a href="https://youtube.com">
+          <img src="/img/icon_twitter.png" alt="inta" />
+        </a>
+        <a href="https://youtube.com">
+          <img src="/img/icon_facebook.png" alt="inta" />
+        </a>
+      </div>
+      <div class="Direccion">
+        Avd. de la Inovacion,1 <br />
+        29004 Málaga <br />
+        Telefono: 954 48 90 90
+      </div>
     </footer>
-</body>
+  </body>
 </html>
