--- a/Ejercicio Pagina Web/html/Ejercicio12.html
+++ b/Ejercicio Pagina Web/html/Ejercicio12.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/Ejercicio12.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>12</title>
 </head>
 <body>
     <form action="">
