--- a/Ejercicio Pagina Web/html/Ejercicio14.html
+++ b/Ejercicio Pagina Web/html/Ejercicio14.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/Ejercicio14.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>14</title>
   </head>
   <body>
     <header>
